# Webserver-Chess-Game

./: .gitignore  CMakeLists.txt  README.md  example_config
config/: crud_integration_test.conf  example.conf  integration_test.conf
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
files/frontend/: index.html
files/static/test_folder/: secret_file.txt
files/static2/: test_file.txt
include/: chess_handler.h  chess_handler_factory.h  config_parser.h  crud_handler.h  crud_handler_factory.h  echo_handler.h  echo_handler_factory.h  error_handler.h  file_handler.h  file_system.h  header.h  health_handler.h  health_handler_factory.h  mock_filesystem.h  not_found_handler.h  persistent_filesystem.h  reply.h  request_handler.h  request_handler_factory.h  server.h  session.h  sleep_handler.h  sleep_handler_factory.h  static_handler.h  static_handler_factory.h
include/chess/: board.h  defs.h  movegen.h
src/: chess_handler.cc  chess_handler_factory.cc  config_parser.cc  crud_handler.cc  crud_handler_factory.cc  echo_handler.cc  echo_handler_factory.cc  error_handler.cc  file_handler.cc  health_handler.cc  health_handler_factory.cc  mock_filesystem.cc  not_found_handler.cc  persistent_filesystem.cc  reply.cc  request_handler.cc  server.cc  server_main.cc  session.cc  sleep_handler.cc  sleep_handler_factory.cc  static_handler.cc  static_handler_factory.cc
src/chess/: board.cpp  defs.cpp  movegen.cpp  searcher.cpp
tests/: config_parser_test.cc  crud_handler_test.cc  double_quote_error  echo_handler_factory_test.cc  echo_handler_test.cc  empty_block  end_block_error  endl_double_quote  endl_single_quote  error_handler_test.cc  example_config  example_config11  example_config2  example_config4  example_config6  example_config8  example_config9  file_handler_test.cc  health_handler_factory_test.cc  health_handler_test.cc  integration_test1_result  integration_test2_result  integration_test4_result  integration_test5_result  integration_test7_echo_result  integration_test7_sleep_result  integration_tests.sh  invalid_left_parenthesis_config  invalid_port  nested_loop_config  not_found_handler_test.cc  reply_test.cc  session_test.cc  single_quote  sleep_handler_factory_test.cc  sleep_handler_test.cc  start_block_error  statement_end_error  static_handler_test.cc  test_port_number
tests/ConfigParserTestFiles/: double_quote  example_config1  example_config10  example_config12  example_config13  example_config7  invalid_right_parenthesis_config  large_port_config  negative_port_config  nested_port  no_port_config  single_quote_error
tests/crud_integration_test/: crud_integration_test.sh  expected_1  expected_2
